[package]
name = "pubsub-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
google-api-proto = { version = "1.79.0", features = ["google-pubsub-v1"] }
tokio = { version = "1.18.2", features = ["full"] }
tonic = "0.7.2"
